exercises/ex-1-07/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hashresponse-svc
spec:
  type: NodePort
  selector:
    app: hashgenerator # This is the app as declared in the deployment.
  ports:
    - name: http
      nodePort: 30080 # This is the port that is available outside. Value for nodePort can be between 30000-32767
      protocol: TCP
      port: 5000 # This is a port that is available to the cluster, in this case it can be ~ anything
      targetPort: 5000 # This is the target port

# apiVersion: v1
# kind: Service
# metadata:
#   name: hashresponse-svc
# spec:
#   type: ClusterIP
#   selector:
#     app: hashgenerator
#   ports:
#     - port: 5000
#       protocol: TCP
#       targetPort: 5000
